--- a/styles/style.css
+++ b/styles/style.css
@@ -8,7 +8,6 @@ body {
     color: white;
 }
 
-
 .header{
   padding: 2%;
   text-align: center;
@@ -21,7 +20,7 @@ body {
 
 
 #welcome-text{
-  font-size: 7rem;
+  font-size: 6rem;
   font-weight: bold;
   color: #f2f2f2;
 }
@@ -29,7 +28,7 @@ body {
 #opg-text {
   color: transparent; /* Makes the inside of the text transparent */
   -webkit-text-stroke: 3px white; /* Creates a white border around the text */
-  font-weight: bold; /* Optional: Enhances the appearance of the border */
+  font-weight: bold;
   font-size: 11rem;
 }
 
@@ -40,12 +39,12 @@ body {
 }
 
 .backgroundVideo {
-  position: absolute; /* Ensures it can stretch to cover the page */
+  position: fixed; /* stay in position while page content is scorlling */
   top: 0;
   left: 0;
-  width: 100%; 
-  height: 100%; 
-  object-fit: cover; /* Ensures the video scales to cover the area without distortion */
+  width: 100vw;
+  height: 100vh;
+  object-fit: cover; /* stretch video to fit whole page */
   filter: brightness(25%);
-  z-index: -1; 
+  z-index: -1;
 }
