--- a/styles/about_page.css
+++ b/styles/about_page.css
@@ -1,22 +1,28 @@
-#about_main{
+#about_main {
     display: flex;
     flex-direction: row;
-    justify-content:space-around;
+    justify-content: space-around;
     margin: 3%;
 }
 
-.about_div{
+.about_div {
     display: flex;
     flex-direction: column;
-    font-size:xx-large;
+    font-size: 2em;
     justify-content: space-evenly;
     align-items: center;
 }
 
-.header-text{
+.header-text {
     text-align: center;
-    font-size: 13vh;
+    font-size: 20vw;
     color: hsla(0, 0%, 100%, 0.282);
     font-weight: bold;
-
 }
+
+@media (max-width: 768px) {
+    #about_main {
+      flex-direction: column;
+    }
+    
+  }
