--- a/styles/members_page.css
+++ b/styles/members_page.css
@@ -16,3 +16,9 @@
     box-sizing: border-box;
     text-align: center;
 }
+
+@media (max-width: 768px) {
+    .member-card {
+        width: calc(80% - 20px);
+    }
+}
