--- a/styles/play_page.css
+++ b/styles/play_page.css
@@ -14,7 +14,7 @@
 }
 
 #restart-button{
-    width: 20%;
+    width: 50%;
     height: 10%;
     background-color: transparent;
     border: 5px solid #ffffff;
@@ -22,11 +22,10 @@
     font-size: 70%;
     text-align: center;
     position: absolute;
-    top: 50%;
-    left: 50%;
     cursor: pointer;
-    transform: translate(-50%, -50%);
+    margin: auto;
 }
+
 
 #question-text{
     font-size: 200%;
@@ -90,6 +89,9 @@
 
 #final-score{
     text-align: center;
-    padding: 1%;
-    margin: 1%;
+}
+
+.answer-btn.disabled {
+    opacity: 0.6;
+    cursor: not-allowed;
 }
